# ahc-rust-template

./: Cargo.toml  README.md  generate.sh  submit.sh
common/: Cargo.toml
common/src/: lib.rs
evaluator/: Cargo.toml
evaluator/src/: main.rs
solver/: Cargo.toml
solver/src/: lib.rs
submission/: Cargo.toml
submission/src/: main.rs
tools/: Cargo.toml
