[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1"
clap = { version = "4", features = ["derive"] }
indicatif = { version = "0.18", features = ["rayon"] }

common = { path = "../common" }
tools = { path = "../tools" }
